2.0.5 (unreleased)
------------------

- i18n cleanup https://github.com/Pylons/deform/pull/332


2.0.4 (2017-02-11)
------------------

- Added ability to pass a translator function to `deform.renderer.configure_zpt_renderer`


2.0.3 (2016-11-19)
------------------

- Added accordions to MappingWidget: http://deformdemo.repoze.org/mapping_accordion/

- Added CSS class ``deform-form-buttons`` to style form button group: https://github.com/Pylons/deform/pull/308

- Add more options to ``TextAreaCSVWidget``: https://github.com/Pylons/deform/pull/309

- Always render an item with a default CSS class: https://github.com/Pylons/deform/pull/306

- Updated pickdate.js library used for the date picker: https://github.com/Pylons/deform/pull/248

- Widget Selenium test suite runs both under Python 2 and 3. Lots of Selenium testing headache fixed with some implicit wait support.

.. note ::

    Currently Python 3 file upload widget may have compatibility issues Please see deformdemo/test.py for details.

2.0.2 (2016-11-14)
------------------

- Fix regression of ``<select>`` widget default values not honoured

- Updated Select2 widget JavaScript

2.0.1 (2016-10-25)
------------------

- Drop support for Python 2.6.

- Documentation reorganization and clean up to conform with Pylons Project
  projects.

- Fix select and select2 widget templates failing on Python 3.x

2.0 (2016-10-23)
----------------

- Release polish


2.0b3 (2016-10-22)
------------------

- Update demos and add standalone mini example

2.0b2 (2016-10-22)
------------------

- Fix README on PyPi

2.0b1 (2016-10-22)
------------------

- Updated bootstrap to 3.3.6.

- Fix dateparts.pt and datetimeinput.pt for changes in bootstrap v3.0.3.
  (The culprit is boostrap commit
  `853b69f <https://github.com/twbs/bootstrap/commit/853b69f2d>`_.)

- Make ``dateinput`` work again by using the fixed name "date" as expected
  by the pstruct schema.  See https://github.com/Pylons/deform/pull/221.
