@@ -6,27 +6,29 @@ addons:
   firefox: "43.0"
 
 matrix:
-    include:
-        - python: 2.7
-          env: TOXENV=py27
-        - python: 3.3
-          env: TOXENV=py33
-        - python: 3.4
-          env: TOXENV=py34
-        - python: 3.5
-          env: TOXENV=py35
-        - python: pypy
-          env: TOXENV=pypy
-        - python: 3.5
-          env: TOXENV=py2-cover,py3-cover,coverage
-        - python: 3.5
-          env: TOXENV=docs
-        - python: 2.7
-          env: TOXENV=functional
-        - python: 3.5
-          env: TOXENV=functional3
-#        - python: pypy3
-#          env: TOXENV=pypy3
+  include:
+    - python: "2.7"
+      env: TOXENV=py27
+    - python: "3.3"
+      env: TOXENV=py33
+    - python: "3.4"
+      env: TOXENV=py34
+    - python: "3.5"
+      env: TOXENV=py35
+    - python: "3.6"
+      env: TOXENV=py36
+    - python: "pypy"
+      env: TOXENV=pypy
+    - python: "pypy3"
+      env: TOXENV=pypy3
+    - python: "3.6"
+      env: TOXENV=py2-cover,py3-cover,coverage
+    - python: "3.6"
+      env: TOXENV=docs
+    - python: "2.7"
+      env: TOXENV=functional
+    - python: "3.6"
+      env: TOXENV=functional3
 
 install:
   - travis_retry pip install tox
