@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py27,py33,py34,py35,pypy,pypy3,
+    py27,py33,py34,py35,py36,pypy,pypy3,
     docs,
     {py2,py3}-cover,coverage,
     functional, functional3
@@ -13,10 +13,11 @@ basepython =
     py33: python3.3
     py34: python3.4
     py35: python3.5
+    py36: python3.6
     pypy: pypy
-    py2: python2.7
-    py3: python3.5
     pypy3: pypy3
+    py2: python2.7
+    py3: python3.6
 
 usedevelop = true
 
@@ -47,7 +48,7 @@ setenv =
     COVERAGE_FILE=.coverage.py3
 
 [testenv:coverage]
-basepython = python3.5
+basepython = python3.6
 commands =
     coverage erase
     coverage combine
@@ -59,7 +60,7 @@ setenv =
     COVERAGE_FILE=.coverage
 
 [testenv:docs]
-basepython = python3.5
+basepython = python3.6
 whitelist_externals = make
 commands =
     pip install deform[docs]
@@ -79,7 +80,7 @@ commands =
 [testenv:functional3]
 # Allow override test browser
 passenv = WEBDRIVER DISPLAY FIREFOX_PATH
-basepython = python3.5
+basepython = python3.6
 commands =
     pip install deform[testing,functional]
     ./run-selenium-tests.bash --with-flaky --max-runs=4 {posargs}
